Added routes and Docs

--- a/package.json
+++ b/package.json
@@ -53,13 +53,9 @@
     "deploy:mainnet": "hardhat run scripts/deploy/deploy-contracts.ts --network cronos-mainnet",
     "verify:testnet": "hardhat run scripts/deploy/verify-contracts.ts --network cronos-testnet",
     "verify:mainnet": "hardhat run scripts/deploy/verify-contracts.ts --network cronos-mainnet",
-    "agents:start": "ts-node agents/core/LeadAgent.ts",
-    "agents:init": "ts-node scripts/setup/setup-agents.ts",
-    "agents:dev": "nodemon --watch agents --exec ts-node agents/core/LeadAgent.ts",
-    "simulator:dev": "concurrently \"cd simulator/backend && npm run dev\" \"cd simulator/frontend && npm run dev\"",
-    "simulator:build": "cd simulator/frontend && npm run build",
-    "simulator:scenario": "ts-node simulator/backend/virtualizer/ScenarioEngine.ts",
-    "simulator:replay": "ts-node simulator/backend/api/controllers/replay-controller.ts",
+    "agents:start": "node -r ts-node/register agents/core/LeadAgent.ts",
+    "agents:init": "node -r ts-node/register scripts/setup/setup-agents.ts",
+    "agents:dev": "nodemon --watch agents --exec node -r ts-node/register agents/core/LeadAgent.ts",
     "dev:next": "next dev",
     "build:next": "next build",
     "start:next": "next start",
@@ -68,9 +64,9 @@
     "frontend:preview": "npm run start:next",
     "logs:agents": "tail -f logs/agents.log",
     "logs:contracts": "tail -f logs/contracts.log",
-    "fund:wallets": "ts-node scripts/setup/fund-wallets.ts",
-    "dev": "concurrently \"npm run agents:dev\" \"npm run simulator:dev\" \"npm run frontend:dev\"",
-    "build": "npm run compile && npm run compile:circuits && npm run simulator:build && npm run frontend:build",
+    "fund:wallets": "node -r ts-node/register scripts/setup/fund-wallets.ts",
+    "dev": "npm run dev:next",
+    "build": "npm run compile && npm run frontend:build",
     "start": "npm run agents:start"
   },
   "dependencies": {
