--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,9 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "target": "ES2021",
     "lib": ["ES2021"],
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "noEmit": false,
     "outDir": "./dist",
     "rootDir": "./",
@@ -31,5 +34,9 @@
     ".next",
     "dist",
     "coverage"
-  ]
+  ],
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  }
 }
