--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typechain": "^8.3.2",
     "typescript": "^5.9.3"
   },
