fix: Change default theme to dark mode and update live URLs
- Set default theme to dark in ThemeContext
- Update RainbowKit to use darkTheme
- Add dark background classes to layout and pages
- Update README with live Vercel URL: https://zkvanguard.vercel.app
- Fix white theme visibility issues

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "logs:contracts": "tail -f logs/contracts.log",
     "fund:wallets": "node -r ts-node/register scripts/setup/fund-wallets.ts",
     "dev": "npm run dev:next",
-    "build": "npm run compile && npm run frontend:build",
+    "build": "next build",
+    "build:full": "npm run compile && npm run frontend:build",
     "start": "npm run agents:start"
   },
   "dependencies": {
