chore: update dependencies and build configuration
- Update package dependencies
- Enhance .gitignore patterns

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clean": "rimraf dist coverage .hardhat cache",
     "compile": "hardhat compile",
     "compile:circuits": "node scripts/utils/generate-circuits.ts",
-    "test": "jest",
+    "test": "cross-env ZK_PYTHON_ENABLED=true ZK_PYTHON_API_URL=http://127.0.0.1:8000 jest --verbose --logHeapUsage --detectOpenHandles",
     "test:agents": "jest test/agents",
     "test:integration": "jest test/integration",
     "test:contracts": "hardhat test",
@@ -116,6 +116,7 @@
     "@typescript-eslint/parser": "^6.16.0",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
+    "cross-env": "^10.1.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
