--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@openzeppelin/contracts-upgradeable": "^5.4.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.90.12",
+    "@vvs-finance/swap-sdk": "^0.0.5",
     "axios": "^1.6.2",
     "chart.js": "^4.5.1",
     "cors": "^2.8.5",
