chore: update gitignore and next.config.js

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ INVESTOR_ANALYSIS_HONEST.md
 zkvanguard_pitch_deck.md.docx
 INVESTOR_PITCH_DECK_UPDATED.md
 zkvanguard_pitch_deck.md.pdf
+DEMO_WALKTHROUGH_GUIDE.md
+DEMO_WALKTHROUGH_GUIDE.md
