feat(swap): Add support for BTC, ETH, ATOM, LINK, SHIB, DOGE and more tokens in VVS swap
- Added mainnet token addresses for WBTC, WETH, ATOM, LINK, SHIB, DOGE, BUSD to swap API
- Added same tokens to VVSFinanceService for testnet
- Added balance token addresses for new tokens
- Updated SwapModal dropdowns to include all 13 tokens: CRO, WCRO, USDC, USDT, VVS, BTC, ETH, ATOM, LINK, SHIB, DOGE, DAI, BUSD
- Fixed package.json scripts to use cross-env for Windows compatibility

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "agents:start": "bun run agents/core/LeadAgent.ts",
     "agents:init": "bun run scripts/setup/setup-agents.ts",
     "agents:dev": "bun --watch run agents/core/LeadAgent.ts",
-    "dev:next": "next dev",
-    "build:next": "next build",
+    "dev:next": "cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "build:next": "cross-env NODE_OPTIONS=--no-deprecation next build",
     "start:next": "next start",
     "frontend:dev": "bun run dev:next",
     "frontend:build": "bun run build:next",
