--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@openzeppelin/contracts": "^5.4.0",
     "@openzeppelin/contracts-upgradeable": "^5.4.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
+    "@shazow/whatsabi": "^0.25.0",
     "@tanstack/react-query": "^5.90.12",
     "@vvs-finance/swap-sdk": "^0.0.5",
     "axios": "^1.6.2",
