feat(i18n): integrate next-intl middleware and config
- Update middleware.ts to use shared routing config for i18n
- Add withNextIntl plugin to next.config.js
- Add next-intl ^4.7.0 dependency to package.json

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.303.0",
     "next": "^14.0.4",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.2.1",
     "openai": "^4.77.3",
     "pg": "^8.11.3",
