chore: update gitignore and backup old next config

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,15 @@ storybook-static/
 
 docs/guides/QUICK_DEMO_SCRIPT.md
 docs/reports/AI_CHAT_TEST_REPORT.md
+docs/guides/GASLESS_REALITY.md
+Investors/1-Audio.m4a
+Investors/3-Audio.m4a
+Investors/2-Audio.m4a
+Investors/4-Audio.m4a
+Investors/5-Audio.m4a
+Investors/6-Audio.m4a
+Investors/7-Audio.m4a
+Investors/8-Audio.m4a
+Investors/9-Audio.m4a
+Investors/10-Audio.m4a
+Investors/11-Audio.m4a
