docs: add ASI API configuration to .env.example
- Document ASI_API_KEY and ASI_MODEL environment variables
- Reference ASI:One documentation at docs.asi1.ai

--- a/.env.example
+++ b/.env.example
@@ -27,13 +27,20 @@ EXPLORER_API_KEY=your_explorer_api_key
 # Priority 1: Crypto.com AI (Native to ecosystem - recommended)
 #   - Set CRYPTOCOM_DEVELOPER_API_KEY above
 #
-# Priority 2: OpenAI (Enterprise-grade, scalable)
+# Priority 2: ASI API (Fetch.ai's ASI:One - Production AI)
+#   - Get your API key from: https://asi1.ai/
+#   - Works with Crypto.com AI SDK as backend
+#   - Models: asi1-mini (balanced), asi1-fast, asi1-extended, asi1-agentic
+ASI_API_KEY=your_asi_one_api_key_here
+ASI_MODEL=asi1-mini
+#
+# Priority 3: OpenAI (Enterprise-grade, scalable)
 OPENAI_API_KEY=your_openai_api_key_here
 #
-# Priority 3: Anthropic Claude (Safety-focused, enterprise-grade)
+# Priority 4: Anthropic Claude (Safety-focused, enterprise-grade)
 ANTHROPIC_API_KEY=your_anthropic_claude_api_key
 #
-# Priority 4: Ollama (FREE, LOCAL, SECURE - NO DATA LEAVES YOUR SERVER)
+# Priority 5: Ollama (FREE, LOCAL, SECURE - NO DATA LEAVES YOUR SERVER)
 #   - Install from: https://ollama.ai
 #   - Run: ollama pull qwen2.5:7b
 #   - No API key needed - runs completely locally with CUDA acceleration
