Rebrand to ZkVanguard + Add AI to agents
- Renamed all references from Chronos Vanguard to ZkVanguard
- Added AI-powered recommendations to ReportingAgent using ASI API
- Added AI batch optimization to SettlementAgent
- Updated docs, README, and system context for LLM provider
- All agents now properly integrate with ASI for production AI

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ===========================================
-# CHRONOS-VANGUARD PROJECT .GITIGNORE
+# ZKVANGUARD PROJECT .GITIGNORE
 # Next.js + Hardhat + Python ZK + Bun Stack
 # ===========================================
 
