feat: add react-markdown and remark-gfm for chat rendering

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@vvs-finance/swap-sdk": "^0.0.5",
     "axios": "^1.6.2",
+    "buffer": "^6.0.3",
     "chart.js": "^4.5.1",
     "cors": "^2.8.5",
     "date-fns": "^3.0.6",
@@ -96,7 +97,9 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "redis": "^4.6.12",
+    "remark-gfm": "^4.0.1",
     "uuid": "^9.0.1",
     "viem": "^2.42.0",
     "wagmi": "^2.19.5",
