feat(i18n): add AI-powered translation script and full whitepaper i18n
- Created scripts/translate-whitepaper.ts using Ollama/ASI for translation
- Added npm run translate command
- Translated 102 whitepaper strings to all 11 non-English languages
- Updated whitepaper page.tsx to use translation keys for:
  - Problem section (privacy exposure, front-running, etc)
  - Solution section (predictive paradigm, core stack, UX flow)
  - Architecture section (overview, tech stack, contracts)
  - Agents section (all 6 agent names and titles)
  - ZK Privacy section (protocol, security, verification, hedge arch)
  - Gasless section (overview, implementation, flow)
  - Predictions section (sources, hedge ratio, scenarios)
  - Multi-chain section (networks, roadmap)
  - Security section (contracts, cryptographic, operational)
  - Tokenomics section (revenue, projections)
  - Roadmap section (all milestones)
  - References and footer CTA

All 12 languages now have full whitepaper support

--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "logs:agents": "tail -f logs/agents.log",
     "logs:contracts": "tail -f logs/contracts.log",
     "fund:wallets": "bun run scripts/setup/fund-wallets.ts",
+    "translate": "bun run scripts/translate-whitepaper.ts",
+    "translate:whitepaper": "bun run scripts/translate-whitepaper.ts",
     "dev": "bun run dev:next",
     "build": "next build",
     "build:full": "bun run compile && bun run frontend:build",
