--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: latest
+    
     - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: bun install --frozen-lockfile
       
     - name: Run linter
       run: npm run lint
@@ -56,17 +60,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: latest
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
-        cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: bun install --frozen-lockfile
     
     - name: Build Next.js
-      run: npm run build
+      run: bun run build
       env:
         NEXT_TELEMETRY_DISABLED: 1
     
