feat: integrate ZK-STARK proofs with hedge execution and database storage
- Add ZK proof generation to hedge execute API (both simulation and on-chain)
- Generate proofs via Python/CUDA backend with fallback to local hashes
- Store zkProofHash in database alongside hedge records
- Add wallet_address column to hedges schema for wallet association
- Update gitignore for business strategy documents
- Include zkProofHash in API response for verification

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,8 @@ deployments/
 # Business Strategy Documents (Confidential)
 # -------------------------------------------
 docs/ACQUISITION_PLAN.md
+docs/GO_TO_MARKET_PLAN.md
+docs/VIDEO_PITCH_SCRIPTS.md
 
 # -------------------------------------------
 # Environment Files (CRITICAL - Contains private keys & API keys)
