feat: real entry prices from MockMoonlander + fresh hedges with live market prices
- Updated MockMoonlander on-chain mock prices to match live market (BTC $71K, ETH $2.1K, SOL $88, CRO $0.081)
- Read actual entry prices from MockMoonlander.getTrade() instead of hardcoded FALLBACK_PRICES
- Updated FALLBACK_PRICES to current market values
- Added MockMoonlander ABI + contract reference to onchain route
- Opened 4 new hedges via relayer with accurate entry prices:
  BTC SHORT $5K x5, ETH LONG $3K x3, SOL LONG $2K x5, CRO LONG $1K x10
- Added contract verification input files (mock-contracts-input.json, zkproxy-vault-input.json)
- All 4 contracts verified on Cronos testnet explorer"

--- a/.gitignore
+++ b/.gitignore
@@ -320,3 +320,10 @@ whitepaper/
 test/ZKProxyVault.test.cjs
 test/ZKProxyVault.test.js
 docs/WEEKLY_SUBMISSION_2026-02-04.md
+ZKProxyVault_flat.sol
+zkproxy-vault-input.json
+MockMoonlander_flat.sol
+mock-contracts-input.json
+HedgeExecutor_flat.sol
+hedge-executor-metadata.json
+hedge-executor-input.json
