docs: add BlueFin environment variables to example

--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,14 @@ NEXT_PUBLIC_MOONLANDER_API_SECRET=your_moonlander_api_secret
 # Cronos Testnet RPC for Moonlander trading
 NEXT_PUBLIC_CRONOS_TESTNET_RPC=https://evm-t3.cronos.org
 
+# BlueFin Perpetuals on SUI Network
+# Get API access from: https://bluefin.io
+# Used by: /api/agents/hedging/bluefin, BluefinService
+# BLUEFIN_PRIVATE_KEY is the Ed25519 private key for your SUI wallet
+BLUEFIN_PRIVATE_KEY=your_sui_wallet_private_key_here
+BLUEFIN_USE_MOCK=true
+BLUEFIN_NETWORK=testnet
+
 DELPHI_CONTRACT_ADDRESS=0x...
 
 # Database (PostgreSQL - Neon free tier recommended)
