--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "start": "bun run agents:start"
   },
   "dependencies": {
+    "@bluefin-exchange/bluefin-v2-client": "^6.5.1",
     "@crypto.com/ai-agent-client": "^1.0.2",
     "@crypto.com/developer-platform-client": "^1.1.2",
     "@crypto.com/facilitator-client": "^1.0.4",
