--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,5 @@ docs/pitch-deck/slide-07-traction.md
 docs/pitch-deck/slide-06-business-model.md
 docs/pitch-deck/slide-05-market-opportunity.md
 docs/pitch-deck/glossary.md
+docs/FOUNDER_VIDEO_SCRIPT.md
+docs/PROJECT_DESCRIPTION.md
