feat: Implement TRUE gasless hedge execution via agentOpenHedge
- Switch from openHedge() to agentOpenHedge() with AGENT_ROLE
- Fund HedgeExecutor contract with 200M USDC pool
- Grant AGENT_ROLE to relayer (0xb61C1c...870D10)
- Users now pay \.00 gas (relayer pays ~\.03)
- Add setup scripts: setup-gasless.ts, grant-agent-role.ts
- Update API documentation and implementation guide

Transactions:
- AGENT_ROLE: 0xb6373678f4299e890359058683b12cc321699630855ecefd2a9b0d94279fa096
- Contract funding: 0x3263c2999cbaee96b8919e6efb4289be8f5b6f56bfa6f2d7f9d4e62305051f92

Result: TRUE gasless - users pay \.00 for all hedge operations

--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,7 @@ docs/pitch-deck/slide-05-market-opportunity.md
 docs/pitch-deck/glossary.md
 docs/FOUNDER_VIDEO_SCRIPT.md
 docs/PROJECT_DESCRIPTION.md
+docs/MAINNET_MIGRATION_GUIDE.md
+scripts/check-prices.mts
+scripts/close-1550m.ts
+scripts/mint-and-prepare.ts
