feat: complete FREE services setup + Vercel deployment guide
- Add comprehensive FREE_SERVICES_GUIDE.md (100% FREE stack)
- Create SCALABILITY_ANALYSIS.md (1-500K users roadmap)
- Add VERCEL_DEPLOYMENT_STATUS.md (deployment instructions)
- Update vercel.json: daily cron (FREE tier compatible)
- Update QUICK_SETUP_AUTO_REBALANCE.md with FREE guide links

Total monthly cost: $0 for hosting, $0-2 for gas
Includes: Gelato relayer (100 txs FREE), Discord notifications,
Vercel KV, Neon PostgreSQL, FREE monitoring stack

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "crons": [
     {
       "path": "/api/cron/auto-rebalance",
-      "schedule": "0 * * * *"
+      "schedule": "0 0 * * *"
     }
   ],
   "headers": [
