--- a/.env.example
+++ b/.env.example
@@ -101,8 +101,8 @@ ANALYTICS_ADMIN_KEY=your_random_admin_key_here
 # Legacy local DB config (optional)
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=chronos_vanguard
-DB_USER=chronos_user
+DB_NAME=zkvanguard
+DB_USER=zkvanguard_user
 DB_PASSWORD=your_db_password
 
 # Redis
