fix: resolve all TypeScript build errors
- Fix analyzePortfolio call to use portfolioData parameter correctly
- Add type assertions for activeHedges (asset, side as strings)
- Fix generateRebalanceProof call signature (expects rebalanceData object + portfolioId)
- All TypeScript errors resolved, build now passes

--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,5 @@ docs/COMPLETION_SUMMARY_*.md
 docs/AUTO_REBALANCE_GUIDE.md
 docs/E2E_TEST_REPORT.md
 docs/VERCEL_COMPATIBILITY_ANALYSIS.md
+scripts/test-auto-hedging-e2e.ts
+scripts/test-vercel-auto-rebalance.ts
