--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "regions": ["sin1"],
   "build": {
     "env": {
-      "NEXT_TELEMETRY_DISABLED": "1"
+      "NEXT_TELEMETRY_DISABLED": "1",
+      "NODE_OPTIONS": "--no-deprecation"
     }
   },
   "crons": [
