--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ docs/E2E_TEST_REPORT.md
 docs/VERCEL_COMPATIBILITY_ANALYSIS.md
 scripts/test-auto-hedging-e2e.ts
 scripts/test-vercel-auto-rebalance.ts
+scripts/test/debug-pool-state.js
