--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     },
     {
       "path": "/api/cron/community-pool",
-      "schedule": "0 */4 * * *"
+      "schedule": "0 12 * * *"
     }
   ],
   "headers": [
