feat: VVS Router mainnet integration with real on-chain quotes
- Add mainnet token addresses (USDC, WCRO, WETH, WBTC)
- Default swap service to Cronos mainnet for production accuracy
- Add production readiness test script
- All services now use real integrations: Crypto.com API, VVS Router, CommunityPool contract

Test results:
- Crypto.com Price API:  PASS
- VVS Router getAmountsOut:  PASS (100 USDC -> 1353 WCRO)
- CommunityPool Contract:  PASS
- Live CRO Price Feed:  PASS

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ docs/VERCEL_COMPATIBILITY_ANALYSIS.md
 scripts/test-auto-hedging-e2e.ts
 scripts/test-vercel-auto-rebalance.ts
 scripts/test/debug-pool-state.js
+scripts/test-production-services.cjs
