refactor: proactive price feed - always instant, never blocks
- Proactive 5-second background refresh for tracked symbols (BTC, ETH, SUI, CRO)
- Single batch API call refreshes all symbols efficiently
- getTokenPrice() always returns from cache instantly (0ms delay)
- Removed redundant _fetchTokenPrice method
- Non-tracked symbols use on-demand fetch with request deduplication
- CommunityPool operations never blocked by price fetching

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ scripts/test-auto-hedging-e2e.ts
 scripts/test-vercel-auto-rebalance.ts
 scripts/test/debug-pool-state.js
 scripts/test-production-services.cjs
+docs/PRODUCTION_READINESS_AUDIT.md
+scripts/test-ai-decision-data.cjs
