--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ scripts/test/debug-pool-state.js
 scripts/test-production-services.cjs
 docs/PRODUCTION_READINESS_AUDIT.md
 scripts/test-ai-decision-data.cjs
+scripts/tests/test-ai-services-integration.ts
