Fix cron comments for parser compatibility, test all monitoring endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -10,11 +10,23 @@
   "crons": [
     {
       "path": "/api/cron/auto-rebalance",
-      "schedule": "0 0 * * *"
+      "schedule": "0 * * * *"
     },
     {
       "path": "/api/cron/community-pool",
-      "schedule": "0 12 * * *"
+      "schedule": "0 */4 * * *"
+    },
+    {
+      "path": "/api/cron/hedge-monitor",
+      "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/cron/liquidation-guard",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/pool-nav-monitor",
+      "schedule": "0 * * * *"
     }
   ],
   "headers": [
