--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ scripts/test-production-services.cjs
 docs/PRODUCTION_READINESS_AUDIT.md
 scripts/test-ai-decision-data.cjs
 scripts/tests/test-ai-services-integration.ts
+.env*.local
