feat: enable Community Pool AI auto-management cron job
- Add cron job to vercel.json (every 4 hours)
- Cron fetches pool stats, records NAV snapshots, runs risk assessment
- Triggers auto-hedging when needed

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "framework": "nextjs",
   "regions": ["sin1"],
+  "crons": [
+    {
+      "path": "/api/cron/community-pool",
+      "schedule": "0 */4 * * *"
+    }
+  ],
   "build": {
     "env": {
       "NEXT_TELEMETRY_DISABLED": "1",
