feat(oasis): add ParaTime SVG logos & env var templates\n\n- Add SVG logos: oasis-emerald, oasis-sapphire, oasis-cipher, oasis-consensus\n- Update .env.example with Emerald & Sapphire RPC URLs and contract address vars"

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,14 @@ NODE_ENV=development
 CRONOS_TESTNET_RPC=https://evm-t3.cronos.org/
 CRONOS_MAINNET_RPC=https://evm.cronos.org/
 
+# Oasis Sapphire Network Configuration (Confidential EVM ParaTime)
+OASIS_SAPPHIRE_TESTNET_RPC=https://testnet.sapphire.oasis.io
+OASIS_SAPPHIRE_MAINNET_RPC=https://sapphire.oasis.io
+
+# Oasis Emerald Network Configuration (Public EVM ParaTime)
+OASIS_EMERALD_TESTNET_RPC=https://testnet.emerald.oasis.io
+OASIS_EMERALD_MAINNET_RPC=https://emerald.oasis.io
+
 # Private Keys (DO NOT COMMIT REAL KEYS)
 PRIVATE_KEY=your_private_key_here
 DEPLOYER_PRIVATE_KEY=your_deployer_key_here
@@ -150,6 +158,36 @@ MAX_GAS_LIMIT=8000000
 FORK_CRONOS=false
 FORK_BLOCK_NUMBER=0
 REPORT_GAS=true
+
+# Oasis Sapphire Contract Addresses (Testnet)
+NEXT_PUBLIC_OASIS_ZKVERIFIER_ADDRESS=
+NEXT_PUBLIC_OASIS_RWAMANAGER_ADDRESS=
+NEXT_PUBLIC_OASIS_PAYMENT_ROUTER_ADDRESS=
+NEXT_PUBLIC_OASIS_CONFIDENTIAL_ZK_VERIFIER=
+NEXT_PUBLIC_OASIS_GASLESS_COMMITMENT_VERIFIER=
+NEXT_PUBLIC_OASIS_HEDGE_EXECUTOR_ADDRESS=
+
+# Oasis Sapphire Contract Addresses (Mainnet)
+NEXT_PUBLIC_OASIS_MAINNET_ZKVERIFIER_ADDRESS=
+NEXT_PUBLIC_OASIS_MAINNET_RWAMANAGER_ADDRESS=
+NEXT_PUBLIC_OASIS_MAINNET_PAYMENT_ROUTER_ADDRESS=
+NEXT_PUBLIC_OASIS_MAINNET_CONFIDENTIAL_ZK_VERIFIER=
+NEXT_PUBLIC_OASIS_MAINNET_GASLESS_COMMITMENT_VERIFIER=
+NEXT_PUBLIC_OASIS_MAINNET_HEDGE_EXECUTOR_ADDRESS=
+
+# Oasis Emerald Contract Addresses (Testnet)
+NEXT_PUBLIC_EMERALD_ZKVERIFIER_ADDRESS=
+NEXT_PUBLIC_EMERALD_RWAMANAGER_ADDRESS=
+NEXT_PUBLIC_EMERALD_PAYMENT_ROUTER_ADDRESS=
+NEXT_PUBLIC_EMERALD_GASLESS_COMMITMENT_VERIFIER=
+NEXT_PUBLIC_EMERALD_HEDGE_EXECUTOR_ADDRESS=
+
+# Oasis Emerald Contract Addresses (Mainnet)
+NEXT_PUBLIC_EMERALD_MAINNET_ZKVERIFIER_ADDRESS=
+NEXT_PUBLIC_EMERALD_MAINNET_RWAMANAGER_ADDRESS=
+NEXT_PUBLIC_EMERALD_MAINNET_PAYMENT_ROUTER_ADDRESS=
+NEXT_PUBLIC_EMERALD_MAINNET_GASLESS_COMMITMENT_VERIFIER=
+NEXT_PUBLIC_EMERALD_MAINNET_HEDGE_EXECUTOR_ADDRESS=
 
 # Security
 JWT_SECRET=your_jwt_secret_here
